Remove visited array references from README
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TkyDaWFuvUsVxmsEc5cffs