@@ -8,7 +8,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class ParallelRasterStrategy extends RasterStrategy {
@@ -58,7 +57,7 @@ public class ParallelRasterStrategy extends RasterStrategy {
                         .filter(x -> bitmap[y][x] == 0 && RasterScanSupport.isTopLeft(bitmap, x, y))
                         .mapToObj(x -> RasterScanSupport.detect(bitmap, x, y, rows, cols)))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
